# dense_mats

./: Cargo.toml  README.rst  Rationale.rst  index.html
array_like/: Cargo.toml
array_like/src/: lib.rs
doc/: search-index.js
doc/dense_mats/: enum.StorageOrder.html  index.html  sidebar-items.js  trait.DenseMatOwned.html  trait.DenseMatView.html
doc/src/dense_mats/: lib.rs.html
src/: array_like.rs  errors.rs  lib.rs  mat.rs  tensor.rs
