[package]
name = "dense_mats"
description = "Traits to abstract over dense matrices"
version = "0.1.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]

readme = "README.rst"
license = "MIT"

repository = "https://github.com/vbarrielle/dense_mats"
documentation = "https://vbarrielle.github.io/dense_mats/doc/dense_mats/"
keywords = ["matrix", "dense"]
