[package]
name = "dense_mats"
description = "A strided dense matrix implementation"
version = "0.3.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]

readme = "README.rst"
license = "MIT"

repository = "https://github.com/vbarrielle/dense_mats"
documentation = "https://vbarrielle.github.io/dense_mats/doc/dense_mats/"
keywords = ["matrix", "dense", "stride"]

[dependencies]

num = "*"

