[package]
name = "dense_mats"
description = "A strided dense tensor implementation"
version = "0.3.4"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]

readme = "README.rst"
license = "MIT"

repository = "https://github.com/vbarrielle/dense_mats"
documentation = "https://vbarrielle.github.io/dense_mats/doc/dense_mats/"
keywords = ["matrix", "vector", "tensor", "ndarray", "dense"]

[dependencies]

num = "*"

